--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ul {
+    list-style-type: disc; /* Untuk menampilkan bullet */
+}
+ol {
+    list-style-type: decimal; /* Untuk daftar bernomor */
+}
